--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -487,9 +487,9 @@ limitations under the License. -->
   <string name="table_column_Events">Ereignisse</string>
   <string name="table_column_Note">Anmerkung</string>
   <string name="marketStatePRE">Vorbörse</string>
-  <string name="marketStatePREPRE">Bevor Vorbörse</string>
+  <string name="marketStatePREPRE">Vorbörse noch nicht geöffnet</string>
   <string name="marketStateREGULAR">Normal</string>
   <string name="marketStatePOST">Nachbörse</string>
-  <string name="marketStatePOSTPOST">Nach Nachbörse</string>
+  <string name="marketStatePOSTPOST">Nachbörse geschlossen</string>
   <string name="marketStateCLOSED">Geschlossen</string>
 </resources>
