--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -466,6 +466,8 @@ limitations under the License. -->
   <string name="filter_MatchRegexTextType">match regex</string>
   <string name="filter_NotMatchRegexTextType">not match regex</string>
   <string name="filter_IsPresentType">is present</string>
+  <string name="filter_IsOnePresentType">is only one present</string>
+  <string name="filter_IsAllPresentType">are all present</string>
   <string name="filter_IsNotPresentType">is not present</string>
   <string name="filter_IsUsedType">is used</string>
   <string name="filter_IsNotUsedType">is not used</string>
