--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -505,8 +505,10 @@ limitations under the License. -->
   <string name="marketStateCLOSED">Closed</string>
   <string name="new_symbol">New symbol name</string>
   <string name="select_symbol">Select symbol</string>
-  <string name="no_symbols_available">No symbol to rename available.</string>
+  <string name="no_symbols_available">No symbols available.</string>
   <string name="symbol_name_not_valid">Enter a valid symbol name.</string>
   <string name="symbol_renamed">The symbol \'%1$s\' was renamed to \'%2$s\'.</string>
   <string name="symbol_not_renamed">The symbol \'%1$s\' could not be renamed to \'%2$s\'.</string>
+  <string name="add_selection">Add to the selection</string>
+  <string name="remove_selection">Remove from the selection</string>
 </resources>
