--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -388,7 +388,7 @@ limitations under the License. -->
   <string name="filter_displayname_name">Display name</string>
   <string name="filter_displayname_desc"></string>
   <string name="filter_marketcap_name">Market Capitalization</string>
-  <string name="filter_marketcap_desc">Market Capitalization is in Millions.\nFor example 42 is 42000000 = 42M Market Cap.\n\nNano-Cap is below 50M\nMicro-Cap is between 50M and 300M\nSmall-Cap is between 300M and 2B\nMid-Cap is between 2B and 10B\nLarge-Cap is more than 10B</string>
+  <string name="filter_marketcap_desc">Market Capitalization is in Millions.\nFor example 42 is 42000000 = 42M Market Cap.\n\nLarge-Cap is more than 10B\nMid-Cap is between 2B and 10B\nSmall-Cap is between 300M and 2B\nMicro-Cap is between 50M and 300M\nNano-Cap is below 50M</string>
   <string name="filter_quotetype_name">Quote type</string>
   <string name="filter_quotetype_desc"></string>
   <string name="filter_stockexchangename_name">Stock exchange name</string>
@@ -473,11 +473,11 @@ limitations under the License. -->
   <string name="filter_IsNotUsedType">is not used</string>
   <string name="filter_IsType">is</string>
   <string name="filter_IsNotType">is not</string>
-  <string name="filter_IsMarketNanoCapType">is Nano-Cap</string>
-  <string name="filter_IsMarketMicroCapType">is Micro-Cap</string>
-  <string name="filter_IsMarketMidCapType">is Mid-Cap</string>
-  <string name="filter_IsMarketSmallCapType">is Small-Cap</string>
   <string name="filter_IsMarketLargeCapType">is Large-Cap</string>
+  <string name="filter_IsMarketSmallCapType">is Small-Cap</string>
+  <string name="filter_IsMarketMidCapType">is Mid-Cap</string>
+  <string name="filter_IsMarketMicroCapType">is Micro-Cap</string>
+  <string name="filter_IsMarketNanoCapType">is Nano-Cap</string>
   <string name="filter_mode">Filter mode</string>
   <string name="delayed_quote">Delayed Quote</string>
   <string name="nasdaq_real_time_price">Nasdaq Real Time Price</string>
