--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -144,6 +144,7 @@ limitations under the License. -->
   <string name="assetlisttotal">Wert</string>
   <string name="assetlistchange">Bestandsänderung</string>
   <string name="assetlistvalue">Bestand</string>
+  <string name="assetlistcommission">Gebühr</string>
   <string name="assetlistdate">Datum</string>
   <string name="assetlistnote">Anmerkung</string>
   <string name="no_total_quantity">Kaufen Sie zuerst einige Wertpapiere.</string>
@@ -190,6 +191,8 @@ limitations under the License. -->
   <string name="asset_share_not_empty">Geben Sie eine Wertpapieranzahl ein.</string>
   <string name="asset_price_not_empty">Geben Sie einen Preis ein.</string>
   <string name="asset_summary_text">Gesamtwertpapierbestand:</string>
+  <string name="commission">Gebühr</string>
+  <string name="asset_commission_not_valid">Geben Sie eine Gebühr ein.</string>
   <string name="title_activity_add">Wertpapiere hinzufügen</string>
   <string name="title_activity_filter">Filter</string>
   <string name="title_activity_stockdata">Wertpapierdetails</string>
