--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,6 +145,7 @@ limitations under the License. -->
   <string name="assetlisttotal">Value</string>
   <string name="assetlistchange">Asset change</string>
   <string name="assetlistvalue">Asset value</string>
+  <string name="assetlistcommission">Commission</string>
   <string name="assetlistdate">Date</string>
   <string name="assetlistnote">Note</string>
   <string name="no_total_quantity">Buy some shares first.</string>
@@ -191,6 +192,8 @@ limitations under the License. -->
   <string name="asset_share_not_empty">Enter a number of stocks.</string>
   <string name="asset_price_not_empty">Enter a price for the stock.</string>
   <string name="asset_summary_text">Total assets:</string>
+  <string name="commission">Commission</string>
+  <string name="asset_commission_not_valid">Enter a commission for the stock.</string>
   <string name="title_activity_add">Add stocks</string>
   <string name="title_activity_filter">Filter</string>
   <string name="title_activity_stockdata">Stock details</string>
