--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -495,6 +495,7 @@ limitations under the License. -->
   <string name="table_column_Purchaseprice">Kaufpreis</string>
   <string name="table_column_Asset">Bestand</string>
   <string name="table_column_AssetChange">Bestandsänderung</string>
+  <string name="table_column_AssetCommission">Gebühr</string>
   <string name="table_column_Dividend">Dividende</string>
   <string name="table_column_AlertAbove">Benachrichtigung über</string>
   <string name="table_column_AlertBelow">Benachrichtigung unter</string>
