--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -293,7 +293,7 @@ limitations under the License. -->
   <string name="donate">Donate</string>
   <string name="email_feedback_summary">Eine E-Mail direkt an die Entwickler.</string>
   <string name="email_feedback_title">E-Mail senden</string>
-  <string name="bought_for">Gekauft für %1$s\n%2$s@%1$s = %3$s</string>
+  <string name="bought_for">Gekauft für</string>
   <string name="version">Version</string>
   <string name="example_List_delete_all">\n\n***\nWählen sie in den Einstellungen die Funktion \'Alle Daten entfernen\', um diese Beispielliste zu löschen.\n***</string>
   <string name="example_List_note">Beispielanmerkung.\n1234 abcd.\nLetzte Zeile der Anmerkung.</string>
