--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -294,7 +294,7 @@ limitations under the License. -->
   <string name="donate">Donate</string>
   <string name="email_feedback_summary">Send an email directly to the developers.</string>
   <string name="email_feedback_title">Send email</string>
-  <string name="bought_for">Bought for %1$s\n%2$s@%1$s = %3$s</string>
+  <string name="bought_for">Bought for</string>
   <string name="version">Version</string>
   <string name="example_List_delete_all">\n\n***\nUse the \'Delete all\' function in the settings to clear this example list.\n***</string>
   <string name="example_List_note">Sample note.\n1234 abcd.\nLast line of the note.</string>
