--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -518,4 +518,5 @@ limitations under the License. -->
   <string name="add_selection">Add to the selection</string>
   <string name="remove_selection">Remove from the selection</string>
   <string name="app_theme">App Theme</string>
+  <string name="summary_commission">Commissions</string>
 </resources>
