--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,7 +82,7 @@ limitations under the License. -->
 
   <!-- Preference Titles -->
   <string name="title_activity_settings">Settings</string>
-  <string name="title_activity_calc">Calc</string>
+  <string name="title_activity_calc">AI</string>
   <string name="general_header">General</string>
   <string name="display_header">Display</string>
   <string name="feedback_header">Feedback</string>
