--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -532,4 +532,5 @@ limitations under the License. -->
   <string name="calc_format_display_group_separator_desc">Zeigt den Tausender-Gruppentrenner für die Zahl an. Zum Beispiel 1.234.567</string>
   <string name="system_header">System</string>
   <string name="calc_stocks">Aktien</string>
+  <string name="clipboard">Zwischenablage=</string>
 </resources>
