--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -533,4 +533,5 @@ limitations under the License. -->
   <string name="calc_format_display_group_separator_desc">Displays the thousands group separator of the number. For example 1,234,567</string>
   <string name="system_header">System</string>
   <string name="calc_stocks">Stocks</string>
+  <string name="clipboard">Clipboard=</string>
 </resources>
