--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -534,4 +534,6 @@ limitations under the License. -->
   <string name="system_header">System</string>
   <string name="calc_stocks">Stocks</string>
   <string name="clipboard">Clipboard=</string>
+  <string name="calc_headline">AI</string>
+  <string name="calc_prog_headline">AI prog</string>
 </resources>
