--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -536,4 +536,6 @@ limitations under the License. -->
   <string name="clipboard">Clipboard=</string>
   <string name="calc_headline">AI</string>
   <string name="calc_prog_headline">AI prog</string>
+  <string name="calc_format_radian">Radian/Degree</string>
+  <string name="calc_format_radian_desc">Use 2\uD835\uDF0B instead of 360° for trigonometric functions.</string>
 </resources>
