--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -536,5 +536,8 @@ limitations under the License. -->
   <string name="calc_headline">AI</string>
   <string name="calc_prog_headline">AI prog</string>
   <string name="calc_format_radian">Radiant/Grad</string>
-  <string name="calc_format_radian_desc">Verwendet das Bogenmaß 2\uD835\uDF0B anstelle von 360° für trigonometrische Funktionen.</string>
+  <string name="calc_format_radian_desc">Verwendet das Bogenmaß 2π anstelle von 360° für trigonometrische Funktionen.</string>
+  <string name="calc_desc">Ergebnisbeschreibung</string>
+  <string name="calc_code">AI code</string>
+  <string name="execute">Ausführen</string>
 </resources>
